package Model;
public enum Indice {
    NOIR,
    BLANC,
    VIDE
}
